--- a/src/app/feed-back/feed-back.component.html
+++ b/src/app/feed-back/feed-back.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="offset-3"></div>
     <div class="col-md-6">
-      <form name="form" #f="ngForm" (submit)="sendFeedback()"  novalidate class="feedback-form">
+      <form name="form" #f="ngForm" (ngSubmit)="f.form.valid && sendFeedback()"  novalidate class="feedback-form">
         <!-- Name -->
         <div class="form-group">
           <label for="name">First Name</label>
@@ -12,7 +12,14 @@
                  name="name"
                  placeholder="Your name"
                  [(ngModel)]="model.name"
-          />
+                 #name="ngModel"
+                 [ngClass]="{'is-invalid': f.submitted && name.invalid}"
+                 required/>
+          <div *ngIf="f.submitted && name.invalid" class="invalid-input">
+            <div *ngIf="name.errors?.required">
+              Name is required
+            </div>
+          </div>
 
         </div>
         <!-- Email -->
@@ -24,7 +31,17 @@
                  name="email"
                  placeholder="Your email"
                  [(ngModel)]="model.email"
-          />
+                 #email="ngModel"
+                 [ngClass]="{'is-invalid': f.submitted && email.invalid}"
+                 required email/>
+          <div *ngIf="f.submitted && email.invalid" class="invalid-input">
+            <div *ngIf="email.errors?.required">
+              Email is required
+            </div>
+            <div *ngIf="email.errors?.email">
+              Email is not valid
+            </div>
+          </div>
 
         </div>
 
@@ -37,9 +54,20 @@
             name="feedback"
             placeholder="Your feedback"
             [(ngModel)]="model.feedback"
-            rows="10" >
+            rows="10"
+            #feedback="ngModel"
+            [ngClass]="{'is-invalid': f.submitted && feedback.invalid}"
+            required minlength="10">
 			    </textarea>
           <!-- input validation group -->
+          <div *ngIf="f.submitted && feedback.invalid" class="invalid-input">
+            <div *ngIf="feedback.errors?.required">
+              Feedback is required
+            </div>
+            <div *ngIf="feedback.errors?.minlength">
+              Feedback is too small, try 10 caracters.
+            </div>
+          </div>
 
         </div>
 
