--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,1 +1,48 @@
-<p>notes works!</p>
+<div class="container">
+  <!-- Note menu -->
+  <div class="row" style="margin-top:12px;">
+    <div class="col-md-8">
+      <input type="text"
+             class="form-control"
+             style="width: 100%;"
+             placeholder="Search notes..." >
+    </div>
+    <div class="col-md-4">
+      <button (click)="createNotebook()"
+              type="buton"
+              class="btn btn-info pull-right"
+              style="margin-left:12px;"><i class="fa fa-plus"></i> New notebook
+      </button>
+      <button type="button"
+              class="btn btn-warning pull-right"
+              style="margin-left:12px;"><i class="fa fa-plus"></i> New note
+      </button>
+    </div>
+
+  </div>
+
+  <!-- Note content -->
+  <div class="row" style="margin-top: 28px;">
+    <!-- Notebooks Menu -->
+    <div class="col-md-3">
+      <br>
+      <div class="list-group list-group-flush">
+        <a (click)="getAllNotebooks()"  class="list-group-item list-group-item-action">
+          <i class="fa fa-book"></i>&nbsp;All
+        </a>
+        <!-- Notebook list -->
+        <a *ngFor="let notebook of notebooks" class="list-group-item list-group-item-action">
+          <i class="fa fa-book"></i>&nbsp;
+          <input [(ngModel)]="notebook.name" (change)="updateNotebook(notebook)" type="text" class="input-label" style="width: 70%">
+          <a (click)="deleteNotebook(notebook)" class="pull-right text-danger">&nbsp;
+            <i class="fa fa-trash"></i>
+          </a>
+        </a>
+
+      </div>
+    </div>
+
+    <!-- Notes Panel -->
+
+  </div>
+</div>
