--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -13,7 +13,8 @@
               class="btn btn-info pull-right"
               style="margin-left:12px;"><i class="fa fa-plus"></i> New notebook
       </button>
-      <button type="button"
+      <button (click)="createNote(selectNotebook.id)" type="button"
+              [disabled]="selectNotebook == null"
               class="btn btn-warning pull-right"
               style="margin-left:12px;"><i class="fa fa-plus"></i> New note
       </button>
@@ -27,13 +28,16 @@
     <div class="col-md-3">
       <br>
       <div class="list-group list-group-flush">
-        <a (click)="getAllNotebooks()"  class="list-group-item list-group-item-action">
+        <a (click)="selectAllNotes()"  class="list-group-item list-group-item-action">
           <i class="fa fa-book"></i>&nbsp;All
         </a>
         <!-- Notebook list -->
-        <a *ngFor="let notebook of notebooks" class="list-group-item list-group-item-action">
+        <a *ngFor="let notebook of notebooks"  (click)="selectedNotebook(notebook)" class="list-group-item list-group-item-action">
           <i class="fa fa-book"></i>&nbsp;
-          <input [(ngModel)]="notebook.name" (change)="updateNotebook(notebook)" type="text" class="input-label" style="width: 70%">
+          <input [(ngModel)]="notebook.name"
+                 (change)="updateNotebook(notebook)"
+                 type="text" class="input-label"
+                 style="width: 70%">
           <a (click)="deleteNotebook(notebook)" class="pull-right text-danger">&nbsp;
             <i class="fa fa-trash"></i>
           </a>
@@ -41,8 +45,62 @@
 
       </div>
     </div>
-
     <!-- Notes Panel -->
+    <div class="col-md-9">
+      <div class="row">
+        <!-- Message if there are no notes -->
+        <h3 *ngIf="selectNotebook != null">
+          {{selectNotebook.name}}
+        </h3>
+        <h3 *ngIf="selectNotebook == null">
+          All notes
+        </h3>
+        <p *ngIf="this.notes.length === 0">
+          There are no notes to display in this notebook
+        </p>
+      </div>
+
+    <div class="row">
+      <!-- Note list  -->
+      <div *ngFor="let note of notes" class="card bg-warning" style="border: 4px solid white;">
+        <div class="card-body" style="padding: 8px; margin-top: 8px;">
+          <div>
+            <!-- title  -->
+            <input (change)="updateNote(note)" [(ngModel)]="note.title" type="text" class="input-label-lg" maxlength="18" style="width: 80%">
+            <a (click)="deleteNote(note)" class="pull-right text-danger">
+              <i class="fa fa-trash"></i>
+            </a>
+          </div>
+          <!-- text -->
+          <textarea (change)="updateNote(note)" class="input-label" style="width: 100%" rows="6" [(ngModel)]="note.text">
+          </textarea>
+          <strong class="text-info" style="font-size: small">
+            <!-- will add date when we learn about pips -->
+          </strong>
+        </div>
+      </div>
+    </div>
+    </div>
+
 
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
