--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,20 @@
 @import "./node_modules/font-awesome/css/font-awesome.min.css";*/
 
 
+.list-group-item{
+  cursor: pointer;
+}
+
+.input-label{
+  background: rgba(0,0,0,0);
+  border: none;
+  cursor: pointer;
+}
+
+.input-label-lg{
+  background: rgba(0,0,0,0);
+  border: none;
+  cursor: pointer;
+  font-size: large;
+  font-weight: bold;
+}
