--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -63,7 +63,10 @@
 
     <div class="row">
       <!-- Note list  -->
-      <app-note *ngFor="let note of notes"></app-note>
+      <app-note *ngFor="let n of notes" [note]="n"
+                (noteUpdated)="updateNote($event)"
+                (noteDeleted)="deleteNote($event)"
+      ></app-note>
       </div>
     </div>
 
