20 angular pipes. closes #20

--- a/src/app/notes/note/note.component.html
+++ b/src/app/notes/note/note.component.html
@@ -12,6 +12,7 @@
           </textarea>
     <strong class="text-info" style="font-size: small">
       <!-- will add date when we learn about pips -->
+      {{note.lastModifiedOn | date : 'dd:MM:yyyy HH:mm'}}
     </strong>
   </div>
 </div>
