--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -3,6 +3,7 @@
   <div class="row" style="margin-top:12px;">
     <div class="col-md-8">
       <input type="text"
+             [(ngModel)]="textSearch"
              class="form-control"
              style="width: 100%;"
              placeholder="Search notes..." >
@@ -51,7 +52,7 @@
       <div class="row">
         <!-- Message if there are no notes -->
         <h3 *ngIf="selectNotebook != null">
-          {{selectNotebook.name}}
+          {{selectNotebook.name }}
         </h3>
         <h3 *ngIf="selectNotebook == null">
           All notes
@@ -64,7 +65,7 @@
     <div class="row">
       <!-- Note list  -->
 
-      <app-note *ngFor="let n of notes" [note]="n"
+      <app-note *ngFor="let n of notes | noteTextFilter: textSearch" [note]="n"
                 (noteUpdated)="updateNote($event)"
                 (noteDeleted)="deleteNote($event)"
       ></app-note>
